fix up alignements of menubar

--- a/tekstaro/assets/css/tekstaro.css
+++ b/tekstaro/assets/css/tekstaro.css
@@ -54,6 +54,7 @@ li {
 
 li > a {
   color: inherit;
+  margin-top: 7px;
 }
 
 .tekstaro_results {
